--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   sqflite: any
   json_annotation: ^2.0.0
 
+dependency_overrides:
+  url_launcher: ^4.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
