--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dio: ^1.0.9
   cached_network_image: ^0.5.1
   sqflite: any
+  photo_view: ^0.1.0
   json_annotation: ^2.0.0
 
 dependency_overrides:
