增加sqlite on web支持，增加新的api，增加搜索支持

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cached_network_image: ^0.5.1
   sqflite: any
   json_annotation: ^2.0.0
+  path_provider: ^0.4.1
+  shared_preferences: ^0.4.3
 
 dependency_overrides:
   url_launcher: ^4.0.1
