--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dio: ^1.0.9
   cached_network_image: ^0.5.1
   sqflite: any
+  share_extend: 1.0.3
   photo_view: ^0.1.0
   json_annotation: ^2.0.0
   path_provider: ^0.4.1
