--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   json_annotation: ^2.0.0
   path_provider: ^0.4.1
   shared_preferences: ^0.4.3
+  path: ^1.6.2
 
 dependency_overrides:
   url_launcher: ^4.0.1
