--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: A new Flutter project.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 0.2.0+2
+version: 0.2.3+2
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -27,6 +27,8 @@ dependencies:
   path_provider: ^0.4.1
   shared_preferences: ^0.4.3
   path: ^1.6.2
+  package_info: ^0.4.0
+  url_launcher: ^5.0.1
 
 dev_dependencies:
   flutter_test:
