--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,6 +27,15 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion 27
 
+    signingConfigs {
+        release {
+            keyAlias 'yande'
+            keyPassword 'Jgm8AzCd0mJsb7e7zqZq'
+            storeFile file('C:/Users/user/OneDrive/yande.jks')
+            storePassword 'Jgm8AzCd0mJsb7e7zqZq'
+        }
+    }
+
     lintOptions {
         disable 'InvalidPackage'
     }
@@ -43,9 +52,10 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.release
         }
     }
 }
